Added Proyect Views and List Adapters

--- a/app/src/main/res/layout/enterprise_layout.xml
+++ b/app/src/main/res/layout/enterprise_layout.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="15dp"
     android:background="@drawable/enterprise"
     tools:layout_editor_absoluteX="10dp"
     tools:layout_editor_absoluteY="35dp">
